public/css/headcount.css
html {
    width: 100%;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(/images/jaghead.png);
    background-position: center;
    background-size: cover;
    height: 100vh;
   
}
nav a:hover{
    color: limegreen;
}



.container{
    display: grid;
    grid-template-rows:1.5em 1fr 1fr 1fr 1fr ;
    grid-template-columns: 25% 50% 25%;
    grid-column-gap:5px;
    grid-template-areas: "nav nav nav"
                         ". sec1 ."
                         ". sec2 ."
                         ". sec3 ."
                         ". sec3 ."
                         ". sec4 ."
                         ". sec5 .";
    }
.nav{grid-area: nav;}
.s1 {grid-area: sec1;}
.s2 { grid-area: sec2;}
.s3 { grid-area: sec3;}
.s4 {grid-area: sec4;}
.s5 {grid-area: sec4;}

nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #1051A0;
    margin: auto;
    box-shadow: 0px 2px 5px #008000;
    margin-left: 0%;
    padding: 1.5em;
 
  }
 
  .navbuttons {
    text-decoration: none;
    color: white;
    padding: 1em 1em;
    font-size: 1.3em;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
 
  }
 
  .navbuttons:hover {
    background-color: #426bba;
  }
 
  .navbar-brand img {
    width: 12em;
    margin-left: 20px;
    margin-top: 5px;
  }
 
  .reportdesk {
    text-decoration: none;
      color: white;
      font-size: 2.5em;
  }
body {
    margin: 0;
    padding: 0;
}
h1 {
    color: white;
    font-size: 3em;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;

}
section {
    display: flex;
    justify-content: space-around;
}
    
h3 {
    color:white;
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    font-family: Arial, sans-serif;
}
.center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

label {
    padding: 25px;
    color: white;
    box-sizing: border-box;
    border: 2px solid blue;
    border-radius: 30px;
    width: 35%;
    text-align: center;
    font-size: 1em;
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;

}
.button {
    background-color: black;
    cursor: pointer;
    position: relative;
    height: 40px;
    width: 50%;
    top: 50%;
    color: white;
    margin-top: 5px;
}

